# mstransfer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml  publish.yml  test.yml
src/mstransfer/: __init__.py  __main__.py  cli.py  log.py
src/mstransfer/client/: __init__.py  sender.py
src/mstransfer/server/: app.py  auth.py  models.py  routes.py  state.py
tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_server.py
tests/data/: test.msz
