[project]
name = "mstransfer"
version = "0.1.0"
description = "Transfer mass spectrometry files (mzML/MSZ) between endpoints using mscompress"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mscompress",
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "rich",
    "python-multipart",
    "pydantic>=2.0",
]

[project.scripts]
mstransfer = "mstransfer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mstransfer"]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "PLC0415"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
    "ruff",
    "pre-commit",
    "pyright>=1.1.408",
]
